--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mardikor-platformasi",
+  "name": "ishtop-platformasi",
   "private": true,
   "version": "0.0.0",
   "type": "module",
