--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://ilyossuyunov416_db_user:Hsw4G83yXy0sQSRl@cluster0.dcvv3ae.mongodb.net/mardikor?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
+TELEGRAM_BOT_TOKEN=8207763567:AAGPB_wzmYMXTEzPxBtHSC44kvNITVhUHJ8
